<resources>
    <string name="app_name">Agenda de contactos</string>
    <string name="hint_full_name">Nombre completo</string>
    <string name="birth_date">Fecha de nacimiento:</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="hint_telephone">Telefono</string>
    <string name="hint_email">Email</string>
    <string name="hint_description">Descripción Contacto</string>
    <string name="next">Siguiente</string>
    <string name="confirmar_datos">Confirmar Datos</string>
    <string name="name">Nombre:</string>
    <string name="fecha_nacimiento">Fecha nacimiento:</string>
    <string name="telephone">Telefono:</string>
    <string name="email">Email:</string>
    <string name="description">Descripción:</string>
    <string name="editar_datos">Editar Datos</string>
</resources>