<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="40dp">

        <EditText
            android:id="@+id/etMainFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_full_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_border_square"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/birth_date" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorOnSecondary" />

            <DatePicker
                android:id="@+id/calendarDateOfBrith"
                style="@android:style/Widget.DatePicker"
                android:layout_width="match_parent"

                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorOnSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDateCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/cancel"
                    android:textColor="?attr/colorOnPrimary" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?attr/colorOnSecondary" />

                <Button
                    android:id="@+id/btnDateOk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/ok"
                    android:textColor="?attr/colorOnPrimary"  />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/etMainTelephone"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telephone" />

        <EditText
            android:id="@+id/etMainEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_email" />

        <EditText
            android:id="@+id/etMainDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_description" />

    </LinearLayout>

    <Button
        android:id="@+id/btnMainNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:foreground="@drawable/background_border_square"
        android:text="@string/next"
        android:textColor="?attr/colorOnPrimary" />

</LinearLayout>